@@ -1,4 +1,5 @@
 0.4.2 (trunk):
+* Add a `redirect_uri` option to `URI.authorize`, to permit the redirection URL to be parameterizable.
 * Add `User.current_info` and `User.info` to retrieve information about the logged in user, or a public one.
 * Add `Issues.edit` to patch an existing issue.
 * Correct the type of `Issues.milestone` to be an integer.
